azuredeploy.json
    {
        "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
        "contentVersion": "1.0.0.0",
        "parameters": {
            "virtualMachineName": {
                "type": "string"
            },
            "virtualMachineSize": {
                "type": "string",
                "defaultValue": "Standard_B2ms"
            },
            "adminUsername": {
                "type": "string"
            },
            "adminPassword": {
                "type": "securestring"
            },
            "mysqlPassword": {
                "type": "securestring"
            },
            "replicaPassword": {
                "type": "securestring"
            },
            "artifactsLocation": {
                "type": "string"
            },
            "SASToken": {
                "type": "string"
            }
        },
        "variables": {
            "networkSecurityGroupName": "nsgMySQLReplication",
            "virtualNetworkName": "vnetMySQLReplication",
            "subnetName": "subnetMySQLReplication",
            "addressPrefix": "10.0.0.0/24",
            "networkInterfaceName": "[concat(parameters('virtualMachineName'),'-nic01')]",
            "publicIpAddressName": "[concat(parameters('virtualMachineName'),'-pip01')]",
            "publicIpAddressType": "Static",
            "publicIpAddressSku": "Basic",
            "vnetId": "[resourceId(resourceGroup().name,'Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
            "subnetRef": "[concat(variables('vnetId'), '/subnets/', variables('subnetName'))]"
        },
        "resources": [
            {
                "name": "[variables('networkSecurityGroupName')]",
                "type": "Microsoft.Network/networkSecurityGroups",
                "apiVersion": "2018-01-01",
                "location": "[resourceGroup().location]",
                "properties": {
                    "securityRules": [
                        {
                            "name": "SSH",
                            "properties": {
                                "priority": 300,
                                "protocol": "Tcp",
                                "access": "Allow",
                                "direction": "Inbound",
                                "sourceApplicationSecurityGroups": [],
                                "destinationApplicationSecurityGroups": [],
                                "sourceAddressPrefix": "*",
                                "sourcePortRange": "*",
                                "destinationAddressPrefix": "*",
                                "destinationPortRange": "22"
                            }
                        },                    
                        {
                            "name": "MySQL",
                            "properties": {
                                "priority": 301,
                                "protocol": "Tcp",
                                "access": "Allow",
                                "direction": "Inbound",
                                "sourceApplicationSecurityGroups": [],
                                "destinationApplicationSecurityGroups": [],
                                "sourceAddressPrefix": "*",
                                "sourcePortRange": "*",
                                "destinationAddressPrefix": "*",
                                "destinationPortRange": "3306"
                            }
                        }
                    ]
                }
            },
            {
                "name": "[variables('virtualNetworkName')]",
                "type": "Microsoft.Network/virtualNetworks",
                "apiVersion": "2018-04-01",
                "location": "[resourceGroup().location]",
                "dependsOn": [
                    "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]"
                ],
                "properties": {
                    "addressSpace": {
                        "addressPrefixes": [
                            "[variables('addressPrefix')]"
                        ]
                    },
                    "subnets": [
                        {
                            "name": "[variables('subnetName')]",
                            "properties": {
                                "addressPrefix": "[variables('addressPrefix')]",
                                "networkSecurityGroup": {
                                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                                }
                            }
                        }
                    ]
                }
            },
            {
                "name": "[variables('publicIpAddressName')]",
                "type": "Microsoft.Network/publicIpAddresses",
                "apiVersion": "2017-08-01",
                "location": "[resourceGroup().location]",
                "properties": {
                    "publicIpAllocationMethod": "[variables('publicIpAddressType')]"
                },
                "sku": {
                    "name": "[variables('publicIpAddressSku')]"
                }
            },
            {
                "name": "[variables('networkInterfaceName')]",
                "type": "Microsoft.Network/networkInterfaces",
                "apiVersion": "2018-04-01",
                "location": "[resourceGroup().location]",
                "dependsOn": [
                    "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
                    "[concat('Microsoft.Network/publicIpAddresses/', variables('publicIpAddressName'))]"
                ],
                "properties": {
                    "ipConfigurations": [
                        {
                            "name": "ipconfig1",
                            "properties": {
                                "subnet": {
                                    "id": "[variables('subnetRef')]"
                                },
                                "privateIPAllocationMethod": "Dynamic",
                                "publicIpAddress": {
                                    "id": "[resourceId(resourceGroup().name,'Microsoft.Network/publicIpAddresses', variables('publicIpAddressName'))]"
                                }
                            }
                        }
                    ]
                }
            },
            {
                "name": "[parameters('virtualMachineName')]",
                "type": "Microsoft.Compute/virtualMachines",
                "apiVersion": "2018-04-01",
                "location": "[resourceGroup().location]",
                "dependsOn": [
                    "[concat('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName'))]"
                ],
                "properties": {
                    "osProfile": {
                        "computerName": "[parameters('virtualMachineName')]",
                        "adminUsername": "[parameters('adminUsername')]",
                        "adminPassword": "[parameters('adminPassword')]"
                    },
                    "hardwareProfile": {
                        "vmSize": "[parameters('virtualMachineSize')]"
                    },
                    "storageProfile": {
                        "imageReference": {
                            "publisher": "Canonical",
                            "offer": "UbuntuServer",
                            "sku": "16.04-LTS",
                            "version": "latest"
                        },
                        "osDisk": {
                            "name": "[concat(parameters('virtualMachineName'),'-disk0')]",
                            "createOption": "fromImage",
                            "diskSizeGB": 64,
                            "managedDisk": {
                                "storageAccountType": "Premium_LRS"
                            }
                        },
                        "dataDisks": []
                    },
                    "networkProfile": {
                        "networkInterfaces": [
                            {
                                "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
                            }
                        ]
                    }
                }
            },
            {
                "type": "Microsoft.Compute/virtualMachines/extensions",
                "name": "[concat(parameters('virtualMachineName'),'/MySQLInstall')]",
                "apiVersion": "2015-06-15",
                "location": "[resourceGroup().location]",
                "dependsOn": [
                  "[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachineName'))]"
                ],
                "properties": {
                  "publisher": "Microsoft.Azure.Extensions",
                  "type": "CustomScript",
                  "typeHandlerVersion": "2.0",
                  "autoUpgradeMinorVersion": true,
                  "settings": {
                    "fileUris": [
                      "[concat(parameters('artifactsLocation'),parameters('SASToken'))]"
                    ]
                  },
                  "protectedSettings": {
                    "commandToExecute": "[concat('bash install_mysql_server_5.6.sh ', parameters('mysqlPassword'), ' ', parameters('replicaPassword'))]"
                  }
                }
              }
        ],
        "outputs": {}
    }
